--- a/index.html
+++ b/index.html
@@ -79,30 +79,29 @@
             <div class="form" >
                 <select name="" id="setWakeTime" onchange="setImage(this);">
                     <option value="default">select time below</option>
-                    <option value="\img\5.jpg">8AM - 9AM</option>
-                    <option value="\img\2.jpg">9AM - 10AM</option>
-                    <option value="\img\3.jpg">10AM - 11AM</option>
-                    <option value="\img\4.jpg">11AM - 12PM</option>
-                    <option value="\img\1.jpg">12PM - 1PM</option>
-                    <option value="\img\5.jpg">1PM - 2PM</option>
-                    <option value="\img\2.jpg">2PM - 3PM</option>
-                    <option value="\img\3.jpg">3PM - 4PM</option>
-                    <option value="\img\4.jpg">4PM - 5PM</option>
-                    <option value="\img\1.jpg">5PM - 6PM</option>
-                    <option value="\img\5.jpg">6PM - 7PM</option>
-                    <option value="\img\2.jpg">7PM - 8PM</option>
-                    <option value="\img\3.jpg">8PM - 9PM</option>
-                    <option value="\img\4.jpg">9PM - 10PM</option>
-                    <option value="\img\1.jpg">10PM - 11PM</option>
-                    <option value="\img\5.jpg">11PM - 12AM</option>
-                    <option value="\img\1.jpg">1AM - 2AM</option>
-                    <option value="\img\2.jpg">2PM - 3AM</option>
-                    <option value="\img\3.jpg">3PM - 4AM</option>
-                    <option value="\img\4.jpg">4PM - 5AM</option>
-                    <option value="\img\5.jpg">5PM - 6AM</option>
-                    <option value="\img\2.jpg">6PM - 7AM</option>
-                    <option value="\img\1.jpg">7PM - 8AM</option>
-
+                    <option value="./img/5.jpg">8AM - 9AM</option>
+                    <option value="./img/4.jpg">9AM - 10AM</option>
+                    <option value="./img/1.jpg">10AM - 11AM</option>
+                    <option value="./img/2.jpg">11AM - 12PM</option>
+                    <option value="./img/3.jpg">12PM - 1PM</option>
+                    <option value="./img/4.jpg">1PM - 2PM</option>
+                    <option value="./img/5.jpg">2PM - 3PM</option>
+                    <option value="./img/1.jpg">3PM - 4PM</option>
+                    <option value="./img/2.jpg">4PM - 5PM</option>
+                    <option value="./img/3.jpg">5PM - 6PM</option>
+                    <option value="./img/4.jpg">6PM - 7PM</option>
+                    <option value="./img/5.jpg">7PM - 8PM</option>
+                    <option value="./img/4.jpg">8PM - 9PM</option>
+                    <option value="./img/3.jpg">9PM - 10PM</option>
+                    <option value="./img/2.jpg">10PM - 11PM</option>
+                    <option value="./img/1.jpg">11PM - 12AM</option>
+                    <option value="./img/4.jpg">1AM - 2AM</option>
+                    <option value="./img/5.jpg">2PM - 3AM</option>
+                    <option value="./img/3.jpg">3PM - 4AM</option>
+                    <option value="./img/2.jpg">4PM - 5AM</option>
+                    <option value="./img/1.jpg">5PM - 6AM</option>
+                    <option value="./img/5.jpg">6PM - 7AM</option>
+                    <option value="./img/1.jpg">7PM - 8AM</option>
                 </select>
                 <br/>
                 
