--- a/index.html
+++ b/index.html
@@ -109,58 +109,58 @@
 
                     <select name="" id="setLunchTime" onchange="setImage(this);">
                         <option value="default">select time below</option>
-                    <option value="\img\6.jpg">8AM - 9AM</option>
-                    <option value="\img\7.jpg">9AM - 10AM</option>
-                    <option value="\img\8.jpg">10AM - 11AM</option>
-                    <option value="\img\9.jpg">11AM - 12PM</option>
-                    <option value="\img\10.jpg">12PM - 1PM</option>
-                    <option value="\img\11.jpg">1PM - 2PM</option>
-                    <option value="\img\10.jpg">2PM - 3PM</option>
-                    <option value="\img\9.jpg">3PM - 4PM</option>
-                    <option value="\img\8.jpg">4PM - 5PM</option>
-                    <option value="\img\7.jpg">5PM - 6PM</option>
-                    <option value="\img\6.jpg">6PM - 7PM</option>
-                    <option value="\img\8.jpg">7PM - 8PM</option>
-                    <option value="\img\9.jpg">8PM - 9PM</option>
-                    <option value="\img\11.jpg">9PM - 10PM</option>
-                    <option value="\img\10.jpg">10PM - 11PM</option>
-                    <option value="\img\6.jpg">11PM - 12AM</option>
-                    <option value="\img\8.jpg">1AM - 2AM</option>
-                    <option value="\img\7.jpg">2PM - 3AM</option>
-                    <option value="\img\9.jpg">3PM - 4AM</option>
-                    <option value="\img\10.jpg">4PM - 5AM</option>
-                    <option value="\img\11.jpg">5PM - 6AM</option>
-                    <option value="\img\6.jpg">6PM - 7AM</option>
-                    <option value="\img\8.jpg">7PM - 8AM</option>
+                    <option value="./img/6.jpg">8AM - 9AM</option>
+                    <option value="./img/7.jpg">9AM - 10AM</option>
+                    <option value="./img/8.jpg">10AM - 11AM</option>
+                    <option value="./img/9.jpg">11AM - 12PM</option>
+                    <option value="./img/10.jpg">12PM - 1PM</option>
+                    <option value="./img/11.jpg">1PM - 2PM</option>
+                    <option value="./img/10.jpg">2PM - 3PM</option>
+                    <option value="./img/8.jpg">3PM - 4PM</option>
+                    <option value="./img/9.jpg">4PM - 5PM</option>
+                    <option value="./img/7.jpg">5PM - 6PM</option>
+                    <option value="./img/8.jpg">6PM - 7PM</option>
+                    <option value="./img/6.jpg">7PM - 8PM</option>
+                    <option value="./img/7.jpg">8PM - 9PM</option>
+                    <option value="./img/9.jpg">9PM - 10PM</option>
+                    <option value="./img/10.jpg">10PM - 11PM</option>
+                    <option value="./img/11.jpg">11PM - 12AM</option>
+                    <option value="./img/6.jpg">1AM - 2AM</option>
+                    <option value="./img/7.jpg">2PM - 3AM</option>
+                    <option value="./img/8.jpg">3PM - 4AM</option>
+                    <option value="./img/9.jpg">4PM - 5AM</option>
+                    <option value="./img/10.jpg">5PM - 6AM</option>
+                    <option value="./img/11.jpg">6PM - 7AM</option>
+                    <option value="./img/10.jpg">7PM - 8AM</option>
 
                 </select>
             </p>
             <p>
                 <select name="setNapTime" id="setNapTime" onchange="setImage(this);">
-                    <option value="default">select time below</option>
-                    <option value="\img\12.jpg">8AM - 9AM</option>
-                    <option value="\img\13.jpg">9AM - 10AM</option>
-                    <option value="\img\14.jpg">10AM - 11AM</option>
-                    <option value="\img\16.jpg">11AM - 12PM</option>
-                    <option value="\img\15.jpg">12PM - 1PM</option>
-                    <option value="\img\14.jpg">1PM - 2PM</option>
-                    <option value="\img\13.jpg">2PM - 3PM</option>
-                    <option value="\img\12.jpg">3PM - 4PM</option>
-                    <option value="\img\15.jpg">4PM - 5PM</option>
-                    <option value="\img\16.jpg">5PM - 6PM</option>
-                    <option value="\img\13.jpg">6PM - 7PM</option>
-                    <option value="\img\12.jpg">7PM - 8PM</option>
-                    <option value="\img\14.jpg">8PM - 9PM</option>
-                    <option value="\img\15.jpg">9PM - 10PM</option>
-                    <option value="\img\16.jpg">10PM - 11PM</option>
-                    <option value="\img\12.jpg">11PM - 12AM</option>
-                    <option value="\img\15.jpg">1AM - 2AM</option>
-                    <option value="\img\12.jpg">2PM - 3AM</option>
-                    <option value="\img\14.jpg">3PM - 4AM</option>
-                    <option value="\img\16.jpg">4PM - 5AM</option>
-                    <option value="\img\13.jpg">5PM - 6AM</option>
-                    <option value="\img\14.jpg">6PM - 7AM</option>
-                    <option value="\img\15.jpg">7PM - 8AM</option>
+                   <option value="default">select time below</option>
+                    <option value="./img/12.jpg">8AM - 9AM</option>
+                    <option value="./img/17.jpg">9AM - 10AM</option>
+                    <option value="./img/13.jpg">10AM - 11AM</option>
+                    <option value="./img/15.jpg">11AM - 12PM</option>
+                    <option value="./img/16.jpg">12PM - 1PM</option>
+                    <option value="./img/14.jpg">1PM - 2PM</option>
+                    <option value="./img/15.jpg">2PM - 3PM</option>
+                    <option value="./img/12.jpg">3PM - 4PM</option>
+                    <option value="./img/14.jpg">4PM - 5PM</option>
+                    <option value="./img/15.jpg">5PM - 6PM</option>
+                    <option value="./img/16.jpg">6PM - 7PM</option>
+                    <option value="./img/17.jpg">7PM - 8PM</option>
+                    <option value="./img/15.jpg">8PM - 9PM</option>
+                    <option value="./img/14.jpg">9PM - 10PM</option>
+                    <option value="./img/12.jpg">10PM - 11PM</option>
+                    <option value="./img/13.jpg">11PM - 12AM</option>
+                    <option value="./img/14.jpg">1AM - 2AM</option>
+                    <option value="./img/15.jpg">2PM - 3AM</option>
+                    <option value="./img/12.jpg">3PM - 4AM</option>
+                    <option value="./img/13.jpg">4PM - 5AM</option>
+                    <option value="./img/15.jpg">5PM - 6AM</option>
+                    <option value="./img/14.jpg">6PM - 7AM</option>
+                    <option value="./img/15.jpg">7PM - 8AM</option>
                 </select>
             </p>
             <button class="greeting btn" type="" onload="updateTime()" id="greeting"></button>
